# BaseRust

./: README.md
base_rust/: Cargo.toml  Rocket.toml
base_rust/src/: main.rs
