[package]
name = "base_rust"
version = "0.1.0"
authors = ["ShadowRoland <shadowr1431@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.0"
ferris_print = "0.1.0"
rocket = "0.4.5" # Web framework for nightly with a focus on ease-of-use, expr
diesel = { version = "1.4.5", features = ["mysql"]}  # A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL
dotenv = "0.15.0" # A `dotenv` implementation for Rust

r2d2-diesel = "1.0" # r2d2 support for Diesel
r2d2 = "0.8" # A generic connection pool
serde = "1.0.115" # A generic serialization/deserialization framework
serde_derive = "1.0" # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde_json = "1.0.57" # A JSON serialization file format
custom_derive ="0.1.7" # (Note: superseded by `macro-attr`) This crate provides a macro that enables the use of custom …
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

mobc-redis = "0.5.3" # Redis support for the mobc connection pool
mobc = "0.5.12" # A generic connection pool with async/await support
